# Project_1

./: .env.example  .flake8  README.md  external_api.py  pyproject.toml  requirements.txt  test_utils.py  utils.py
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_9cff78eb4dda181f___init___py.html
logs/: mylog.txt
src/: config.py  data_reader.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: test_data_reader.py  test_decorators.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
