[tool.poetry]
name = "pythonProject4"
version = "0.1.0"
packages = [
    { include = "pythonProject4", from = "src" }
]
description = "Виджет, который показывает несколько последних успешных банковских операций клиента банка"
authors = ["Valerii Volynchikov <avto162@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^1.9.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 119
ignore = ["E203", "W503"]
exclude = [".git"]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'